--- a/publications.html
+++ b/publications.html
@@ -66,12 +66,12 @@
 
     .page-header .hero-sub {
       margin-top:  2rem;
-      max-width:   60ch;
+      max-width:   80ch;
       font-size:   1.0rem;
       line-height: 2;
       color:       var(--muted);
       opacity:     0;
-      animation:   fadeUp 0.9s 0.7s ease forwards;
+      animation:   fadeUp 0.5s 0.5s ease forwards;
     }
 
     /* ─── PUB LAYOUT ─── */
@@ -264,11 +264,10 @@
 <header class="page-header">
   <canvas id="header-canvas"></canvas>
   <div class="page-header-content">
-    <div class="hero-tag">Lab output</div>
-    <h1>Publications &amp; <em>Research</em></h1>
+    <div class="hero-tag">Output</div>
+    <h1>Publications &amp; <em>Software</em></h1>
     <p class="hero-sub">
       Peer-reviewed articles, book chapters, preprints, and software packages
-      produced by the Network Psychometrics Lab. Citations follow APA 7th edition.
     </p>
   </div>
 </header>
