updated publications to network psychometrics only

--- a/team.html
+++ b/team.html
@@ -138,7 +138,7 @@
       display:          block;
     }
 
-    .faculty-role {
+    .faculty-affil {
       font-size:      0.65rem;
       letter-spacing: 0.2em;
       color:          var(--teal);
@@ -155,7 +155,7 @@
       margin-bottom: 0.3rem;
     }
 
-    .faculty-affil {
+    .faculty-role {
       font-size:      0.68rem;
       letter-spacing: 0.1em;
       color:          var(--muted);
@@ -259,17 +259,17 @@
           <div class="faculty-monogram">
             <img src="team/alexander-christensen.jpg" alt="Alexander P. Christensen" style="object-position: center 60%;">
           </div>
-          <div class="faculty-role">Assistant Professor</div>
+     	  <div class="faculty-affil">Vanderbilt University</div>
           <div class="faculty-name">Alexander P. Christensen</div>
-          <div class="faculty-affil">Vanderbilt University</div>
+          <div class="faculty-role">Assistant Professor</div>
           <div class="member-links">
             <a class="member-link" href="https://github.com/AlexChristensen" target="_blank" rel="noopener">GitHub</a>
             <a class="member-link" href="https://scholar.google.com/citations?user=RbatznQAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a>
           </div>
         </div>
         <div class="student-card">
-          <div class="student-label">Graduate Student</div>
           <div class="student-name">Jeongwon Choi</div>
+		  <div class="student-label">PhD Student</div>
           <div class="member-links" style="margin-top:0.9rem;">
             <a class="member-link" href="https://github.com/choi-jeongwon" target="_blank" rel="noopener">GitHub</a>
             <a class="member-link" href="https://scholar.google.com/citations?user=X7w2AJUAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a>
@@ -283,17 +283,17 @@
           <div class="faculty-monogram">
             <img src="team/hudson-golino.jpg" alt="Hudson Golino" style="object-position: center 8%;">
           </div>
-          <div class="faculty-role">Associate Professor</div>
-          <div class="faculty-name">Hudson Golino</div>
           <div class="faculty-affil">University of Virginia</div>
+          <div class="faculty-name">Hudson Golino</div>
+          <div class="faculty-role">Associate Professor</div>
           <div class="member-links">
             <a class="member-link" href="https://github.com/hfgolino" target="_blank" rel="noopener">GitHub</a>
             <a class="member-link" href="https://scholar.google.com/citations?user=Ris_otUAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a>
           </div>
         </div>
         <div class="student-card">
-          <div class="student-label">Graduate Student</div>
           <div class="student-name">Lara Russell-Lasalandra</div>
+          <div class="student-label">PhD Student</div>
           <div class="member-links" style="margin-top:0.9rem;">
             <a class="member-link" href="https://github.com/laralee" target="_blank" rel="noopener">GitHub</a>
             <a class="member-link" href="https://scholar.google.com/citations?user=yKbSyg8AAAAJ&hl=en&oi=ao" target="_blank" rel="noopener">Google Scholar</a>
@@ -307,16 +307,16 @@
           <div class="faculty-monogram">
             <img src="team/luis-eduardo-garrido.png" alt="Luis Eduardo Garrido" style="object-position: center 25%;">
           </div>
-          <div class="faculty-role">Full Professor-Researcher</div>
-          <div class="faculty-name">Luis Eduardo Garrido</div>
           <div class="faculty-affil">Pontificia Universidad Católica Madre y Maestra</div>
+          <div class="faculty-name">Luis Eduardo Garrido</div>
+          <div class="faculty-role">Full Professor-Researcher</div>
           <div class="member-links">
             <a class="member-link" href="https://scholar.google.com/citations?user=TQjVJ4AAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a>
           </div>
         </div>
         <div class="student-card">
-          <div class="student-label">Graduate Student</div>
           <div class="student-name">Leuny Ortiz</div>
+		  <div class="student-label">PhD Student</div>
         </div>
       </div>
 
