front page text updates

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     font-size:      7rem;
     font-weight:    300;
     color:          var(--teal);
-    opacity:        0.07;
+    opacity:        0.21;
     line-height:    1;
     margin-bottom:  -2.4rem;
     letter-spacing: -0.04em;
@@ -498,8 +498,7 @@
     <span><span class="complex-spacer" aria-hidden="true">Complex </span>Models</span>
   </h2>
   <p class="hero-sub">
-    Network psychometrics reconceives psychological phenomena — personality, psychopathology, cognition —
-    as complex and dynamic systems of interacting variables.
+    Reconceiving psychological constructs as complex and dynamic systems emerging from interacting variables.
   </p>
   <div class="hero-actions">
     <a href="team.html" class="btn-ghost">Meet the Team</a>
@@ -518,47 +517,36 @@
 ══════════════════════════════════════════ -->
 <section id="aims">
   <div class="section-inner">
-    <p class="section-tag">Mission</p>
+    <p class="section-tag">Aims</p>
     <div class="reveal">
-      <h2>Our Aims</h2>
+      <h2>Our Mission</h2>
       <p class="aims-intro">
-        We are building a psychometrics that matches the complexity of the mind —
-        moving from variables as mirrors of latent causes to variables as actors
-        within dynamic, interacting systems.
+        Build a psychometrics that matches the complexity of psychology &ndash; moving from variables as mirrors of latent causes to actors in dynamic, interacting systems.
       </p>
     </div>
     <div class="aims-grid">
 
       <div class="aim-card reveal">
         <div class="aim-number">01</div>
-        <h3 class="aim-title">Reconceive<br>Psychological Structure</h3>
+        <h3 class="aim-title"><em>Reconceiving</em><br>Constructs</h3>
         <p class="aim-body">
-          We model personality, psychopathology, and cognition as complex,
-          dynamic systems of interacting variables — not passive reflections
-          of hidden latent causes. This theoretical shift reframes what it
-          means to measure a mind.
+          Model personality and psychopathology constructs as complex, dynamic systems that emerge from interactions between variables &ndash; not passive reflections of hidden latent causes.
         </p>
       </div>
 
       <div class="aim-card reveal">
         <div class="aim-number">02</div>
-        <h3 class="aim-title">Build Rigorous<br>Psychometric Methods</h3>
+        <h3 class="aim-title"><em>Building</em><br>Rigorous Methods</h3>
         <p class="aim-body">
-          We develop and validate network-based approaches to dimensionality
-          assessment, factor loading estimation, and measurement invariance —
-          grounded in statistical theory and stress-tested via large-scale
-          Monte Carlo simulation.
+          Develop and validate network-based approaches to estimation, dimensionality, item selection, and construct validity &ndash; grounded in statistical theory and stress-tested via large-scale Monte Carlo simulation.
         </p>
       </div>
 
       <div class="aim-card reveal">
         <div class="aim-number">03</div>
-        <h3 class="aim-title">Open Tools for<br>Open Science</h3>
+        <h3 class="aim-title"><em>Distributing</em><br>Open Software</h3>
         <p class="aim-body">
-          We translate our methods into freely available, actively maintained
-          R software packages — enabling researchers everywhere to apply
-          network psychometric techniques to their own data, regardless
-          of institutional resources.
+          Translate methods into freely available R software packages &ndash; enabling researchers everywhere to apply state-of-the-art network psychometric techniques to their own data.
         </p>
       </div>
 
@@ -583,7 +571,7 @@
     <div class="methods-grid">
 
       <div class="method-card reveal">
-        <div class="method-tag">Core</div>
+        <div class="method-tag">Dimensionality</div>
         <div class="method-name">Exploratory Graph Analysis</div>
         <p class="method-desc">
           A network-based framework for estimating the number of latent
@@ -603,7 +591,7 @@
       </div>
 
       <div class="method-card reveal">
-        <div class="method-tag">Loadings</div>
+        <div class="method-tag">Selection</div>
         <div class="method-name">Network Loadings</div>
         <p class="method-desc">
           Factor-loading analogues derived directly from network topology,
@@ -613,7 +601,7 @@
       </div>
 
       <div class="method-card reveal">
-        <div class="method-tag">Model Fit</div>
+        <div class="method-tag">Fit</div>
         <div class="method-name">Total Entropy Fit Index</div>
         <p class="method-desc">
           An information-theoretic fit index evaluating how well a proposed
@@ -633,7 +621,7 @@
       </div>
 
       <div class="method-card reveal">
-        <div class="method-tag">Generative AI</div>
+        <div class="method-tag">AI</div>
         <div class="method-name">Generative Psychometrics</div>
         <p class="method-desc">
           Leveraging large language model embeddings and network community
