--- a/team.html
+++ b/team.html
@@ -159,6 +159,7 @@
   <ul>
     <li><a href="team.html" class="active">Team</a></li>
     <li><a href="publications.html">Publications</a></li>
+    <li><a href="software.html">Software</a></li>
   </ul>
   <button id="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">☰</button>
   <button id="theme-toggle" aria-label="Toggle light/dark mode">
